--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,7 @@
   "functions": {
     "pages/api/callback.js": {
       "memory": 1024,
-      "maxDuration": 10,
-      "runtime": "nodejs18.x"
+      "maxDuration": 10
     }
   },
   "env": {
