--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,3 @@
 {
-  "functions": {
-    "pages/api/callback.js": {
-      "memory": 1024,
-      "maxDuration": 10
-    }
-  },
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "version": 2
 }
