--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@line/bot-sdk": "^7.5.2",
+    "axios": "^1.9.0",
+    "googleapis": "^126.0.1",
     "next": "^14.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@line/bot-sdk": "^7.5.2",
-    "googleapis": "^126.0.1"
+    "react-dom": "^18.2.0"
   },
   "engines": {
     "node": ">=18.0.0"
