--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,25 @@
 {
-  "version": 2
+  "version": 2,
+  "functions": {
+    "pages/api/**/*.js": {
+      "maxDuration": 300,
+      "memory": 3008
+    }
+  },
+  "build": {
+    "env": {
+      "NODE_OPTIONS": "--max-old-space-size=3008"
+    }
+  },
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }
+      ]
+    }
+  ]
 }
