--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,12 @@
   "version": 2,
   "functions": {
     "pages/api/**/*.js": {
-      "maxDuration": 300,
-      "memory": 3008
+      "maxDuration": 60
     }
   },
   "build": {
     "env": {
-      "NODE_OPTIONS": "--max-old-space-size=3008"
+      "NODE_OPTIONS": "--max-old-space-size=1024"
     }
   },
   "headers": [
@@ -18,6 +17,10 @@
         {
           "key": "Cache-Control",
           "value": "no-cache, no-store, must-revalidate"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
         }
       ]
     }
